--- a/scss/layout/_container.scss
+++ b/scss/layout/_container.scss
@@ -3,11 +3,14 @@
     width: 100%;
     max-width: 75rem;   
     margin: 0 auto;
+  
     
     @include sm {
         .content {
-            padding: 0;
+            padding: 2rem;
         }
     }
+
+
 }
 
