--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -31,11 +31,11 @@
         grid-template-columns: 1fr 14.875rem 6rem;
         grid-template-rows: 3.5rem;
         grid-template-areas: "logo search menu";    
-        padding: 1.75rem 6rem;    
+        padding: 1.75rem 2rem;    
     }
 
     @include lg {
-       padding: 2rem 6rem;
+       padding: 2rem 1rem;
   
        grid-template-columns: 6fr repeat(4, auto);
        grid-template-areas: "logo support contact search menu";
