--- a/scss/layout/_services.scss
+++ b/scss/layout/_services.scss
@@ -1,12 +1,14 @@
-.services-heading {
-    margin-top: 2rem;      
+.services-heading {     
     display: flex;
     justify-content: space-between;   
     margin-bottom: 1.5rem;
     margin-top: 2.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
 
     h2 {
         font-size: 2.5rem;
+        
     }
     
     a {
@@ -22,8 +24,7 @@
     }
 }
 
-.service-cards {
-   
+.service-cards {   
    
     @include lg {            
         display: grid;
